--- a/css/style.css
+++ b/css/style.css
@@ -418,11 +418,182 @@
 #container .section__event{
     margin: 148px 0 128px;
 }
+.section__event .section__cnt{
+    display: flex;
+    justify-content: space-between;
+}
+.section__event .section__cnt .section__cnt-box{
+    position: relative;
+    display: block;
+    width: 44vw;
+    max-width: 600px;
+    height: 27vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 30px;
+    box-sizing: border-box;
+}
+.section__event .section__cnt .section__cnt-box:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.2);
+}
+.section__event .section__cnt .section__cnt-box:nth-child(1){
+    background-image: url("../images/main/event1.jpg")
+}
+.section__event .section__cnt .section__cnt-box:nth-child(2){
+    background-image: url("../images/main/event2.png")
+}
+.section__event .section__cnt .section__cnt-box .section__event-desc{
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    color: rgba(255,255,255,0.7);
+    z-index: 1;
+}
+.section__event .section__cnt .section__cnt-box .section__event-desc .section__event-title{
+    display: block;
+    font-size: 1.3rem;
+    padding-bottom: 18px;
+    color: rgba(255, 255, 255, 1);
+}
+
+
+/* Notice */
+#container .section__notice{
+    display: flex;
+    justify-content: space-between;
+}
+#container .section__notice .section__top{
+    display: block;
+}
+.section__notice .section__top .btn-more{
+    margin-top: 12px;
+}
+.section__notice .section__cnt{
+    display: flex;
+}
+.section__notice .section__cnt .section__cnt-box{
+    width: 315px;
+}
+.section__notice .section__cnt .section__cnt-box + .section__cnt-box{
+    margin-left: 100px;
+}
+.section__notice .section__cnt .section__cnt-box .section__notice-title{
+    display: block;
+    font-size: 1.3rem;
+    line-height: 1.4;
+    height: 80px;
+    border-bottom: 2px solid #000;
+}
+.section__notice .section__cnt .section__cnt-box .section__notice-desc{
+    font-size: 1.1rem;
+    line-height: 1.6;
+    letter-spacing: .8px;
+    color: rgba(0,0,0,0.7);
+    margin: 20px 0 24px;
+    height: 86px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+.section__notice .section__cnt .section__cnt-box .section__notice-date{
+    color: #999;
+}
+
+/* download */
+#container .section__download{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px 0;
+    background-color: #EDEDED;
+    margin-top: 120px;
+}
+.section__download .section__download-title {
+    font-weight: bold;
+    font-size: 1.8rem;
+    margin: 24px 0
+}
+.section__download .section__download-market{
+    display: flex;
+    align-items: center;
+}
+.section__download .section__download-market a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 174px;
+    height: 48px;
+    border-radius: 24px;
+    background: #fff;
+    font-family: "Open Sans";
+}
+.section__download .section__download-market .section__download-icon{
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-image: url("../images/common/ico-down.png");
+    background-repeat: no-repeat;
+    background-size: 48px;
+    margin-right: 4px;
+}
+.section__download .section__download-market .section__download-ios .section__download-icon{
+    background-position: -26px -31px;
+}
 
 /* footer */
 #footer{
-    margin-top: 120px
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #111;
+    color: rgba(255,255,255,0.5);
+    padding: 45px 30px;
 }
+
+#footer .footer__logo{
+    width: 144px;
+    height: auto;
+    opacity: 0.6;
+}
+#footer .footer__info{
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    margin-left: 36px;
+    font-size: 0.9rem;
+}
+.footer__info > *{
+    padding: 0 10px;
+}
+.footer__info p{
+    position: relative;
+}
+.footer__info p:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 1px;
+    width: 1px;
+    height: 13px;
+    background: rgba(255,255,255,0.5);
+}
+
+/* top button */
+.btn__top{
+    position: fixed;
+    right: 120px;
+    bottom: 240px;
+}
+
 
 
 @media (max-width: 1290px ){
@@ -455,5 +626,13 @@
     }
     .section__space-culture .section__cnt ul li a img{
         width: 90px;
+    }
+
+    .section__event .section__cnt .section__cnt-box{
+        width: 46vw;
+    }
+
+    .section__notice .section__cnt .section__cnt-box + .section__cnt-box{
+        margin-left: 5vw;
     }
 }
