--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 
 @font-face{
     font-family: YouAndI;
@@ -18,7 +18,7 @@ body{
     margin: 0;
 }
 body{
-    font-family: YouAndI, 'Open Sans';
+    font-family: 'Noto Sans KR', YouAndI, 'Malgun Gothic';
 }
 h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
