--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,27 @@
     width: 1230px;
     box-sizing: border-box;
 }
+#container .section__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 32px;
+}
 
+#container .section__title{
+    font-size: 2.6rem;
+    line-height: 1.5;
+    font-weight: 500;
+}
+#container .section__title + p {
+    font-size: 1.2rem;
+}
+
+.section__top .section__top-box .lst-tab {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 /* footer */
 #footer{
